# SafireEngine

./: .clang-format  .gitignore  2  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/code/: main.cpp
project/code/include/: entry_point.hpp
project/code/src/: entry_point.cpp
safire_engine/: CMakeLists.txt
safire_engine/include/safire/component/: entity.hpp
safire_engine/include/safire/core/: application.hpp  ecs.hpp  layer.hpp
safire_engine/include/safire/tools/: dyarray.hpp  dynamic_array.hpp  memory.hpp  string.hpp  utils.hpp
safire_engine/src/core/: application.cpp  ecs.cpp
safire_engine/src/tools/: string.cpp  utils.cpp
